welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:11: error: not found: type color
def faireV(c:color)  {
             ^